--- a/Apps/apropos/README.org
+++ b/Apps/apropos/README.org
@@ -2,8 +2,40 @@
 
 ** Usage
 
-** Installation
+*** CL
 
+#+BEGIN_SRC lisp
+
+(panter:run-apropos-navigator)
+
+#+END_SRC
+
+*** listener
+
+#+BEGIN_SRC
+
+,Run Apropos Navigator
+
+#+END_SRC
+
+*** Drei/Climacs (lisp files)
+
+#+BEGIN_SRC lisp
+
+(#\s :meta :control)
+
+#+END_SRC
+
+** Tested
+
+*** Backends
+- CLX
+- CLXv3
+
+*** CL
+- sbcl 16.1.2
+- ccl 1.11
+      
 ** Author
 
 + Alessandro Serra (gas2serra@gmail.com)
