--- a/Apps/task-manager/README.org
+++ b/Apps/task-manager/README.org
@@ -2,7 +2,33 @@
 
 ** Usage
 
-** Installation
+*** CL
+
+#+BEGIN_SRC lisp
+
+(panter:run-task-manager)
+
+#+END_SRC
+
+*** listener
+
+#+BEGIN_SRC
+
+,Run Task Manager
+
+#+END_SRC
+
+
+** Tested
+
+*** Backends
+- CLX
+- CLXv3
+
+*** CL
+- sbcl 16.1.2
+- ccl 1.11
+
 
 ** Author
 
