--- a/Apps/apropos/README.org
+++ b/Apps/apropos/README.org
@@ -3,6 +3,11 @@
 An interactive apropos application.
 This project started from the wanderful code of @gabriel-laddel ([[https://github.com/robert-strandh/McCLIM/wiki/Navigator][link]]).
 
+
+#+CAPTION: Screenshot
+#+NAME:   fig:screenshot
+[[./doc/img/screenshot-01.jpg]]
+
 ** Usage
 
 *** CL
