--- a/Apps/debugger/README.org
+++ b/Apps/debugger/README.org
@@ -1,5 +1,8 @@
 * Debugger (mcclim-panter)
 
+An improved version of the standard clim debugger. This project started 
+from the wanderful code of @gabriel-laddel ([[https://github.com/robert-strandh/McCLIM/issues/55][link]]).
+
 ** Usage
 
 ** Installation
